--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,13 @@
   "license": "Apache-2.0",
   "main": "per-spec-tive.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.10.1"
+    "polymer": "Polymer/polymer#^1.10.1",
+    "paper-button": "PolymerElements/paper-button#^2.1.1",
+    "paper-card": "PolymerElements/paper-card#^2.1.0",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.1.3",
+    "iron-location": "PolymerElements/iron-location#^2.2.2",
+    "iron-list": "PolymerElements/iron-list#^2.0.17",
+    "simple-colors": "LRNWebComponents/simple-colors#^0.0.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
