--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "iron-ajax": "PolymerElements/iron-ajax#^2.1.3",
     "iron-location": "PolymerElements/iron-location#^2.2.2",
     "iron-list": "PolymerElements/iron-list#^2.0.17",
-    "simple-colors": "LRNWebComponents/simple-colors#^0.0.1"
+    "simple-colors": "LRNWebComponents/simple-colors#^0.0.1",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.2.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
